<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFD0">

    <EditText
        android:id="@+id/event_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/datetext"
        android:focusable="auto"
        android:focusedByDefault="false"
        android:hint="@string/event_message"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/datetext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="200dp"
        android:focusable="auto"
        android:focusedByDefault="false"
        android:hint="@string/default_date"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/add_to_calendar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/event_message"
        android:layout_alignBaseline="@id/sign_in"
        android:layout_alignTop="@id/sign_in"
        android:layout_alignEnd="@id/sign_in"
        android:layout_alignBottom="@id/sign_in"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="false"
        android:layout_marginTop="-10dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="0dp"
        android:width="190dp"
        android:onClick="insert_event"
        android:text="@string/add_to_calendar" />

    <Button
        android:id="@+id/sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/event_message"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="false"
        android:layout_alignParentRight="false"
        android:layout_alignParentBottom="false"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="-10dp"
        android:width="200dp"
        android:onClick="getAccountName"
        android:text="@string/sign_in"
        android:textSize="10sp" />

    <WebView
        android:id="@+id/webview"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/add_to_calendar" />

    <Button
        android:id="@+id/buttonDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/datetext"
        android:layout_alignBottom="@id/datetext"
        android:layout_alignParentTop="false"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:layout_marginBottom="0dp"
        android:layout_toEndOf="@+id/datetext"
        android:onClick="setDate"
        android:text="@string/select_date"
        android:textSize="12sp" />

    <Button
        android:id="@+id/buttonTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/datetext"
        android:layout_alignBottom="@id/buttonDate"
        android:layout_alignParentTop="false"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="-90dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginBottom="0dp"
        android:layout_toEndOf="@+id/buttonDate"
        android:onClick="setTime"
        android:text="@string/select_time"
        android:textSize="12sp" />


</RelativeLayout>